[gd_scene load_steps=6 format=3 uid="uid://bi0ok84377k2o"]

[ext_resource type="Script" path="res://InputMapper/KeyRebind.gd" id="1_r3uuk"]
[ext_resource type="Script" path="res://InputMapper/InputMapper.gd" id="1_wokv1"]
[ext_resource type="Script" path="res://InputMapper/ButtonHolder.gd" id="2_gf0iv"]
[ext_resource type="Script" path="res://InputMapper/KeySelectPopup.gd" id="3_e2v1x"]

[sub_resource type="LabelSettings" id="LabelSettings_b2v11"]
font_size = 32

[node name="KeyRebind" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r3uuk")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RebindLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "Rebind Controls"
label_settings = SubResource("LabelSettings_b2v11")
horizontal_alignment = 1

[node name="ButtonHolder" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 50
columns = 2
script = ExtResource("2_gf0iv")

[node name="DoneButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Done"

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="KeySelectPopup" type="Panel" parent="CenterContainer"]
visible = false
layout_mode = 2
script = ExtResource("3_e2v1x")

[node name="BG" type="ColorRect" parent="CenterContainer/KeySelectPopup"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -177.0
offset_top = -110.5
offset_right = 177.0
offset_bottom = 110.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0.160784, 0.160784, 0.160784, 1)

[node name="Label" type="Label" parent="CenterContainer/KeySelectPopup"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -13.0
offset_right = 50.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Press a key...
"

[node name="InputMapper" type="Node" parent="."]
script = ExtResource("1_wokv1")

[connection signal="pressed" from="VBoxContainer/DoneButton" to="." method="_on_done_button_pressed"]
